--- a/_posts/2013-11-24-city.md
+++ b/_posts/2013-11-24-city.md
@@ -6,4 +6,4 @@ categories: graphic
 work: city.png
 work-type: image
 ---
-This is one of the first synthesis essays that I did. With the time limit that had become a standard by this time, it was rather difficult to create an essay in a format so new to me. This is apparent when looking at the end of the essay. There is no proper conclusion, but rather, it ends during a concession. This work does, however, show notable growth since the beginning of these timed essays. The elements of persuasion are much more apparent than before, as shown by the slightly improved use of sources and the use of a concession. Additionally, the thesis of this work is especially clear in its purpose, giving the reader a guide to how the rest of the work will flow. The diction and prose are still lacking, and fail to contribute to the work.
+One of my first projects in my graphic design I class was to create a city in Adobe Illustrator using 1-point perspective. This project taught me not only about a new element of design, but also allowed me to expand my knowledge of Illustrator. I have since then used these skills to create much more in-depth works that better incorporate the elements of design. This was, however, an important part of the learning process.
